syntax = "proto3";

option csharp_namespace = "Microsoft.Telepathy.ProtoBuf";

package Microsoft.Telepathy.ProtoBuf;

message InnerTask {
  string service_name = 1;
  string method_name = 2;
  MethodEnum method_type = 3;
  string session_id = 4;
  string client_id = 5;
  string message_id = 6;
  bytes msg = 7;
}

message InnerResult {
  bytes msg = 1;
  // state_code 0: success, 1: failed
  int32 state_code = 2;
  string state_detail = 3;
  string session_id = 4;
  string client_id = 5;
  string message_id = 6;
}

enum MethodEnum {
  UNARY = 0;
  CLIENT_STREAM = 1;
  SERVER_STREAM = 2;
  DUPLEX_STREAM =3;
}

